refactor(assets): groupBy feature now is supported by backend.
